- add bacon, toast with butter, toast with fruit preserves - restrict max honey a hive can hold to 12 - nerf crop affinity ability of bees (there was some wrong math causing them to max out all crops nutrients) - bees with high mutant can develop genetic diseases which prevent them from giving honey - fix mixing category showing fire instead of an arrow